Update RaftActorRecoveryCohort
The cohort should not a full Payload: it only needs to see
StateCommands -- which is the point behind a FIXME in
RaftActorRecoverySupport.

Adjust name to applyRecoveredCommand() and propagate the type
information outwards.

JIRA: CONTROLLER-2137
Change-Id: I07e1b2dcaa349a2d60d6654dc83656f013aad45e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>